--- a/Client/Views/WIndowAddNode.xaml
+++ b/Client/Views/WIndowAddNode.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.Views"
         mc:Ignorable="d"
-        Title="WIndowAddNode" Height="270" Width="300">
+        Title="노드추가" Height="270" Width="300">
     <!-- 창 전체를 관리하는 메인 Grid 레이아웃입니다. -->
     <Grid>
         <!-- Grid의 행을 정의합니다. 첫 번째 행은 GroupBox, 두 번째 행은 버튼을 위한 공간입니다. -->
@@ -34,7 +34,7 @@
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="작업명" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <TextBox Grid.Column="1" Margin="2,2,2,2" BorderBrush="Transparent"/>
+                        <TextBox Text="{Binding NewNode.NODE_TITLE}" Grid.Column="1" Margin="2,2,2,2" BorderBrush="Transparent"/>
                     </Grid>
                 </Border>
 
@@ -46,7 +46,7 @@
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="시작일시" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <DatePicker Grid.Column="1" Margin="2,2,2,2"/>
+                        <DatePicker SelectedDate="{Binding NewNode.DATE_START}" Grid.Column="1" Margin="2,2,2,2"/>
                     </Grid>
                 </Border>
 
@@ -58,7 +58,7 @@
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="종료(예정)일시" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <DatePicker Grid.Column="1" Margin="2,2,2,2"/>
+                        <DatePicker SelectedDate="{Binding NewNode.DATE_END}" Grid.Column="1" Margin="2,2,2,2"/>
                     </Grid>
                 </Border>
 
@@ -70,7 +70,7 @@
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="담당자" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <TextBox Grid.Column="1" Margin="2,2,2,2" BorderBrush="Transparent"/>
+                        <TextBox Grid.Column="1" Text="{Binding NewNode.ASSIGNEE}" Margin="2,2,2,2" BorderBrush="Transparent"/>
                     </Grid>
                 </Border>
 
@@ -83,9 +83,20 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="진행상태" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <ComboBox x:Name="StatusComboBox" Grid.Column="1" Margin="2,2,2,2"/>
 
-                        <Image x:Name="image" Grid.Column="2" Width="{Binding Height, ElementName=image, Mode=OneWay}" Margin="3,3,3,3"></Image>
+                        <ComboBox x:Name="StatusComboBox" Grid.Column="1" Margin="2,2,2,2"
+                                  ItemsSource="{Binding ProcessTypes}"
+                                  DisplayMemberPath="NAME"
+                                  SelectedValuePath="ID"
+                                  SelectedItem="{Binding SelectedType}"/>
+
+                        <Rectangle Fill="{Binding SelectedNodeColor}"
+                                   Stroke="Transparent"
+                                   StrokeThickness="1"
+                                   RadiusX="5"
+                                   RadiusY="5"
+                                   Margin="2,2,2,2"
+                                   Grid.Column="2"/>
                     </Grid>
                 </Border>
             </Grid>
@@ -93,8 +104,8 @@
 
         <!-- '추가' 버튼을 두 번째 행에 배치합니다. -->
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="취소" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" Width="60"/>
-            <Button Content="추가" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" Width="60"/>
+            <Button Content="취소" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" Click="CancelButton_Click" Width="60"/>
+            <Button Content="추가" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" Command ="{Binding AddNodeCommand}" Width="60"/>
         </StackPanel>
         
     </Grid>
