--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Client"
+             xmlns:converters="clr-namespace:Client.Converters"
              StartupUri="Views/WindowInit.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <converters:ColorToBrushConverter x:Key="colorToBrushConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
