--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <converters:ColorToBrushConverter x:Key="colorToBrushConverter"/>
+            <converters:StringToDateConverter x:Key="StringToDateConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
